--- a/build.gradle
+++ b/build.gradle
@@ -18,8 +18,15 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	//apache commons lang
+	// 便利機能、ユーティリティ
 	implementation 'org.apache.commons:commons-lang3:3.14.0'
+
+	// MySQLドライバ(古い書き方に注意)
+	runtimeOnly 'com.mysql:mysql-connector-j'
+
+	// MyBatis Spring Boot Starter
+	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'
+
 	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
