--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=StudentManagement
+spring.application.name=StudentsManagement
 
 
 spring.datasource.url=jdbc:mysql://localhost:3306/StudentManagement
