38ドキュメント自動生成

--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,10 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf:3.2.5'
 	// Validation
 	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation', version: '3.2.5'
+
+	//OpenAPI Generator
+	implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.5.0'
+
 	// 便利機能、ユーティリティ
 	implementation 'org.apache.commons:commons-lang3:3.14.0'
 	//lombok
