--- a/build.gradle
+++ b/build.gradle
@@ -45,10 +45,28 @@ dependencies {
 	// MyBatis Spring Boot Starter
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'
 
+	//APサーバー(Tomcat)
 	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
+
+	//SpringBoot Test
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	//MyBatis Test
+	testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.3'
+	//H2(InmemoryDB)
+	testImplementation 'com.h2database:h2:2.2.224'
+
 }
 
 tasks.named('test') {
 	useJUnitPlatform()
 }
+
+tasks.withType(JavaCompile) {
+	options.encoding = 'UTF-8'
+}
+// compileJavaタスクのエンコーディング
+compileJava.options.encoding = 'UTF-8'
+// compileTestJavaタスクのエンコーディング
+compileTestJava.options.encoding = 'UTF-8'
+// javadocタスクのエンコーディング
+javadoc.options.encoding = 'UTF-8'
