--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=StudentsManagement
 
 
-spring.datasource.url=jdbc:mysql://localhost:3306/StudentManagement
+spring.datasource.url=jdbc:mysql://studentmanagementdb.cv2mw2ii20fk.ap-northeast-1.rds.amazonaws.com:3306/StudentManagement
 spring.datasource.username=root
 spring.datasource.password=JavaQuest2015
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
