--- a/.github/workflows/JavaTest.yml
+++ b/.github/workflows/JavaTest.yml
@@ -5,14 +5,16 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
+env:
+  EC2_USER: 'ec2-user'
+  EC2_HOST: '18.179.9.96'
+  SRC_PATH: 'build/libs/*.jar'
+  DEST_PATH: '/home/ec2-user/StudentManagement.jar'
 
 jobs:
-  build:
+  deploy:
 
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-
     steps:
     - uses: actions/checkout@v4
     - name: Set up JDK 21
@@ -21,13 +23,58 @@ jobs:
         java-version: '21'
         distribution: 'temurin'
 
-    # Configure Gradle for optimal use in GitHub Actions, including caching of downloaded dependencies.
-    # See: https://github.com/gradle/actions/blob/main/setup-gradle/README.md
     - name: Setup Gradle
-      uses: gradle/actions/setup-gradle@417ae3ccd767c252f5661f1ace9f835f9654f2b5 # v3.1.0
+      uses: gradle/actions/setup-gradle@417ae3ccd767c252f5661f1ace9f835f9654f2b5
 
     - name: Make gradlew executable
       run: chmod +x ./gradlew
 
-    - name: Build with Gradle Wrapper
+    - name: Test with Gradle Wrapper
       run: ./gradlew test
+
+    - name: Build with Gradle Wrapper
+      run: ./gradlew boot.Jar
+
+    - name: SCP Copy Application to EC2
+      env:
+        PRIVATE_KEY: ${{ secrets.AWS_EC2_PRIVATE_KEY }}
+      run: |
+        echo "$PRIVATE_KEY" > private_key && chmod 600 private_key
+        scp -o StrictHostKeyChecking=no -i private_key $SRC_PATH $EC2_USER@$EC2_HOST:$DEST_PATH
+
+    - name: SSH Application Deploy
+      uses: appleboy/ssh-action@master
+      with:
+        host: ${{ env.EC2_HOST }}
+        username: ${{ env.EC2_USER }}
+        key: ${{ secrets.AWS_EC2_PRIVATE_KEY }}
+        envs : DEST_PATH
+        script : |
+          sudo yum update -y
+          if [ -f /etc/systemd/system/StudentManagement.service ]; then
+            echo "already exists Service File"
+          else
+          cat <<EOL | sudo yee -a  /etc/systemd/system/StudentManagement.service
+          [Unit]
+          Description = StudentManagement App
+          
+          [Service]
+          ExecStart = java -jar ${DEST_PATH}
+          EnvironmentFile = /etc/sysconfig/StudentManagement
+          Restart = no
+          Type = simple
+          User = ec2-user
+          Group = ec2-user
+          SuccessExistStatus = 143
+          
+          [Install]
+          wantedBy = multi-user.target
+          EOL
+          fi
+          
+          sudo systemctl daemon-reload
+          if sudo systemctl status StudentManagement 2>&1 | grep "Active: active (running" ; then
+            sudo systemctl restart StudentManagement
+          else
+            sudo sudo systemctl start StudentManagement
+          fi
