54cd設定　79行目　sudo sudoの重複を修正

--- a/.github/workflows/JavaTest.yml
+++ b/.github/workflows/JavaTest.yml
@@ -76,5 +76,5 @@ jobs:
           if sudo systemctl status StudentManagement 2>&1 | grep "Active: active (running" ; then
             sudo systemctl restart StudentManagement
           else
-            sudo sudo systemctl start StudentManagement
+            sudo systemctl start StudentManagement
           fi
